# bazel-ios-swiftui-template

./: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  WORKSPACE  WORKSPACE.bzlmod  swift_deps.bzl  swift_deps_index.json
app/: BUILD.bazel
app/source/: MainApp.swift
modules/API/: BUILD.bazel
modules/Models/: BUILD.bazel
